--- a/index.html
+++ b/index.html
@@ -669,18 +669,18 @@
                 class="text-gray-400 hover:text-teal-500 text-sm transition-colors duration-300"
                 >سياسة الخصوصية</a
               >
-              <p class="text-gray-400 text-sm">
-                تم التصميم والتطوير بواسطة
-                <a
-                  href="https://www.sahabcode.com"
-                  target="_blank"
-                  class="attribution-link"
-                  >SahabCode</a
-                >
-              </p>
             </div>
           </div>
         </div>
+        <p class="text-gray-400 text-sm flex justify-center items-center pb-10">
+          تم التصميم والتطوير بواسطة
+          <a
+            href="https://www.sahabcode.com"
+            target="_blank"
+            class="attribution-link"
+            >SahabCode</a
+          >
+        </p>
       </div>
     </footer>
 
