--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               >برامجنا</a
             >
             <a
-              href="#register"
+              href="./register.html"
               class="nav-link text-purple-200 hover:text-yellow-300"
               >التسجيل</a
             >
@@ -240,7 +240,7 @@
           >برامجنا</a
         >
         <a
-          href="#register"
+          href="./register.html"
           class="block text-xl text-purple-200 hover:text-yellow-300"
           >التسجيل</a
         >
@@ -466,18 +466,177 @@
             كل طفل له قدرات فريدة تستحق الاكتشاف والتطوير.
           </p>
           <div
-            class="flex flex-col sm:flex-row gap-4 justify-center items-center"
+            class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-16"
           >
-            <button
+            <a
+              href="./register.html"
               class="bg-gradient-to-r from-yellow-400 to-yellow-500 text-purple-900 px-8 py-3 rounded-full font-bold hover:from-yellow-300 hover:to-yellow-400 transition duration-300 transform hover:scale-105 shadow-lg w-full sm:w-auto"
             >
               احجز جولتك الآن
-            </button>
-            <button
-              class="bg-gradient-to-r from-purple-500 to-pink-500 text-white px-8 py-3 rounded-full font-bold hover:from-purple-600 hover:to-pink-600 transition duration-300 transform hover:scale-105 shadow-lg w-full sm:w-auto"
+            </a>
+          </div>
+
+          <!-- Contact Form Section -->
+          <div class="max-w-4xl mx-auto">
+            <div
+              class="glass-card rounded-3xl overflow-hidden shadow-2xl border border-white/5 bg-purple-900/20"
             >
-              تواصل معنا
-            </button>
+              <div class="p-8 md:p-12 space-y-8">
+                <div class="text-center">
+                  <h3
+                    class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-300 to-pink-300"
+                  >
+                    تواصل معنا
+                  </h3>
+                  <p class="mt-2 text-purple-200">
+                    نحن هنا للإجابة على جميع استفساراتك
+                  </p>
+                </div>
+
+                <!-- Contact Information Cards -->
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+                  <div
+                    class="glass-card rounded-xl p-6 text-center hover:bg-white/5 transition-all duration-300"
+                  >
+                    <div
+                      class="bg-gradient-to-r from-purple-600 to-pink-600 w-12 h-12 rounded-full mx-auto mb-4 flex items-center justify-center"
+                    >
+                      <i class="far fa-clock text-white"></i>
+                    </div>
+                    <h4 class="text-lg font-semibold text-purple-300 mb-2">
+                      ساعات العمل
+                    </h4>
+                    <p class="text-purple-200">٧ص - ٣م</p>
+                  </div>
+                  <div
+                    class="glass-card rounded-xl p-6 text-center hover:bg-white/5 transition-all duration-300"
+                  >
+                    <div
+                      class="bg-gradient-to-r from-purple-600 to-pink-600 w-12 h-12 rounded-full mx-auto mb-4 flex items-center justify-center"
+                    >
+                      <i class="fas fa-envelope text-white"></i>
+                    </div>
+                    <h4 class="text-lg font-semibold text-purple-300 mb-2">
+                      البريد الإلكتروني
+                    </h4>
+                    <p class="text-purple-200">info@brightkids.com</p>
+                  </div>
+
+                  <div
+                    class="glass-card rounded-xl p-6 text-center hover:bg-white/5 transition-all duration-300"
+                  >
+                    <div
+                      class="bg-gradient-to-r from-purple-600 to-pink-600 w-12 h-12 rounded-full mx-auto mb-4 flex items-center justify-center"
+                    >
+                      <i class="fas fa-map-marker-alt text-white"></i>
+                    </div>
+                    <h4 class="text-lg font-semibold text-purple-300 mb-2">
+                      العنوان
+                    </h4>
+                    <p class="text-purple-200">
+                      الرياض، المملكة العربية السعودية
+                    </p>
+                  </div>
+                </div>
+
+                <!-- Contact Form -->
+                <form class="space-y-6" id="contactForm">
+                  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="relative">
+                      <label class="block text-purple-200 mb-2"
+                        >الاسم الكامل</label
+                      >
+                      <input
+                        type="text"
+                        required
+                        class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 border border-purple-500/20 text-white focus:border-purple-500 focus:ring-2 focus:ring-purple-500/20 transition-all duration-300"
+                        placeholder="أدخل اسمك الكامل"
+                      />
+                      <i
+                        class="fas fa-user absolute right-3 top-1/2 -translate-y-1/2 text-purple-400"
+                      ></i>
+                    </div>
+
+                    <div class="relative">
+                      <label class="block text-purple-200 mb-2"
+                        >رقم الجوال</label
+                      >
+                      <input
+                        type="tel"
+                        required
+                        class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 border border-purple-500/20 text-white focus:border-purple-500 focus:ring-2 focus:ring-purple-500/20 transition-all duration-300"
+                        placeholder="05xxxxxxxx"
+                      />
+                      <i
+                        class="fas fa-phone absolute right-3 top-1/2 -translate-y-1/2 text-purple-400"
+                      ></i>
+                    </div>
+
+                    <div class="relative md:col-span-2">
+                      <label class="block text-purple-200 mb-2"
+                        >البريد الإلكتروني</label
+                      >
+                      <input
+                        type="email"
+                        required
+                        class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 border border-purple-500/20 text-white focus:border-purple-500 focus:ring-2 focus:ring-purple-500/20 transition-all duration-300"
+                        placeholder="example@email.com"
+                      />
+                      <i
+                        class="fas fa-envelope absolute right-3 top-1/2 -translate-y-1/2 text-purple-400"
+                      ></i>
+                    </div>
+
+                    <div class="relative md:col-span-2">
+                      <label class="block text-purple-200 mb-2">الموضوع</label>
+                      <select
+                        required
+                        class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 border border-purple-500/20 text-white focus:border-purple-500 focus:ring-2 focus:ring-purple-500/20 transition-all duration-300"
+                      >
+                        <option value="">اختر الموضوع</option>
+                        <option value="inquiry">استفسار عام</option>
+                        <option value="registration">استفسار عن التسجيل</option>
+                        <option value="programs">استفسار عن البرامج</option>
+                        <option value="other">موضوع آخر</option>
+                      </select>
+                      <i
+                        class="fas fa-chevron-down absolute right-3 top-1/2 -translate-y-1/2 text-purple-400"
+                      ></i>
+                    </div>
+
+                    <div class="relative md:col-span-2">
+                      <label class="block text-purple-200 mb-2">الرسالة</label>
+                      <textarea
+                        required
+                        class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 border border-purple-500/20 text-white focus:border-purple-500 focus:ring-2 focus:ring-purple-500/20 transition-all duration-300 h-32 resize-none"
+                        placeholder="اكتب رسالتك هنا..."
+                      ></textarea>
+                      <i
+                        class="fas fa-comment absolute right-3 top-8 text-purple-400"
+                      ></i>
+                    </div>
+                  </div>
+
+                  <!-- Submit Button -->
+                  <div class="flex justify-center pt-4">
+                    <button
+                      type="submit"
+                      class="bg-gradient-to-r from-purple-500 to-pink-500 text-white px-8 py-3 rounded-full font-bold hover:from-purple-600 hover:to-pink-600 transition duration-300 transform hover:scale-105 shadow-lg"
+                    >
+                      إرسال الرسالة
+                    </button>
+                  </div>
+                </form>
+
+                <!-- Success Message -->
+                <div
+                  id="successMessage"
+                  class="hidden bg-green-500/20 text-green-300 p-4 rounded-lg text-center"
+                >
+                  تم إرسال رسالتك بنجاح! سنقوم بالرد عليك في أقرب وقت ممكن.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -743,6 +902,23 @@
       // Initialize on page load
       document.addEventListener("DOMContentLoaded", () => {
         handleScrollAnimation();
+      });
+    </script>
+    <script>
+      // Form Submission Handler
+      const contactForm = document.getElementById("contactForm");
+      const successMessage = document.getElementById("successMessage");
+
+      contactForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // Here you would typically send the form data to your server
+
+        // Show success message
+        contactForm.style.display = "none";
+        successMessage.style.display = "block";
+
+        // Reset form
+        contactForm.reset();
       });
     </script>
   </body>
